[package]
name = "html-swap"
version = "0.1.0"
authors = ["Donatas Rasiukevičius <donatas@rasiukevicius.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
html_parser = "0.7.0"
reqwest = { version = "0.12.0", features = ["blocking"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
    "Document",
    "Element",
    "HtmlAnchorElement",
    "HtmlButtonElement",
    "HtmlCollection",
    "HtmlFormElement",
    "HtmlInputElement",
    "HtmlElement",
    "FormData",
    "Node",
    "NodeList",
    "Window",
] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.

[dev-dependencies]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
